Design & Font Change

--- a/index.html
+++ b/index.html
@@ -1,132 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juriel Garcia</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
-  <body>
-    <header>
-      <div>
-        <h1>Juriel Garcia S</h1>
-        <p>He/Him</p>
-      </div>
-      <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
-      <a href="tel:+6479696331">(647) 969-6331</a>
-      <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
-    </header>
-    <main>
-      <section class="profile">
-        <h2>Profile</h2>
-        <p>
-          Always obsessed with design, code, and music and believes that the
-          world should enjoy these little opportunities with him. He loves
-          learning new things, whether it is recent techniques or something that
-          is already done, he loves to explore and get his hands dirty. Juriel
-          can focus on details, and create something awesome. He likes to code
-          and design. When he is not online, he likes to experiment in cooking,
-          and enjoying a movie or two. Anglophone by day, Hispanophone by night.
-        </p>
-      </section>
-      <section class="personal-skills">
-        <h2>Personal Skills</h2>
-        <ul>
-          <li>He is amicable and approachable.</li>
-          <li>Creative/Innovative.</li>
-          <li>Headstrong.</li>
-          <li>Constantly learning.</li>
-          <li>
-            Excellent communication, interpersonal, and organizational skills.
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Juriel Garcia</title>
+  <link rel="stylesheet" href="main.css" />
+</head>
+
+<body>
+  <header>
+    <div>
+      <h1>Juriel Garcia S</h1>
+      <p>He/Him</p>
+    </div>
+    <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
+    <a href="tel:+6479696331">(647) 969-6331</a>
+    <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
+  </header>
+  <main>
+    <section class="profile">
+      <h2>Profile</h2>
+      <p>
+        Always obsessed with design, code, and music and believes that the
+        world should enjoy these little opportunities with him. He loves
+        learning new things, whether it is recent techniques or something that
+        is already done, he loves to explore and get his hands dirty. Juriel
+        can focus on details, and create something awesome. He likes to code
+        and design. When he is not online, he likes to experiment in cooking,
+        and enjoying a movie or two. Reverent, Anglophone by day. Flamboyant, Hispanophone by night.
+      </p>
+    </section>
+    <section class="personal-skills">
+      <h2>Personal Skills</h2>
+      <ul>
+        <li>Amicable and approachable.</li>
+        <li>Creative/Innovative.</li>
+        <li>Headstrong.</li>
+        <li>Constant yearning to learn.</li>
+        <li>
+          Excellent communication, interpersonal, and organizational skills.
+        </li>
+      </ul>
+    </section>
+    <section class="professional-skills">
+      <h2>Professional Skills</h2>
+      <ul>
+        <li>
+          Sublime proficiency in C/C#/C++, HTML/SCSS/JavaScript, Java, Swift.
+        </li>
+        <li>
+          Excellent understanding of game engines, such as Unity, & Unreal. As well as personal proprietary engines.
+        </li>
+        <li>
+          Wonderful creation skills using different software such as Blender, Adobe
+          Photoshop, & Adobe XD.
+        </li>
+        <li>Created mobile games & experiences, in Android Studio, & Xcode.</li>
+        <li>
+          Excellent documentation skills using Microsoft Office, and Microsoft
+          PowerPoint.
+        </li>
+        <li>Full Stack Web Developer.</li>
+      </ul>
+    </section>
+    <section class="experience">
+      <h2>Experience</h2>
+      <ul>
+        <li>
+          <h3>Freelance Developer</h3>
+          <p>Willow Games, Project Scavenger</p>
+          <p class="date-range">2016 - 20XX</p>
+          <ul>
+            <li>Worked with lead developer on custom tooling for artists.</li>
+            <li>Wrote optimized noise volumetric shaders.</li>
+            <li>
+              Optimized overall performance in certain areas and improved
+              Abstraction.
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="education">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          <h3>Humber College, Toronto</h3>
+          <p class="date-range">2017 – 20XX</p>
+          <p>Game Programming - Advanced Diploma</p>
+        </li>
+        <li>
+          <h3>Brebeuf College, Toronto</h3>
+          <p class="date-range">2012 – 2016</p>
+          <p>Ontario Secondary School - Diploma Granted</p>
+        </li>
+        <li>
+          <h3>Free Code Camp</h3>
+          <p class="date-range">2016 - 20XX</p>
+          <p>
+            Completed certification course on Responsive Web Design,
+            JavaScript Algorithms & Data Structures, & Front-End Libraries.
+          </p>
           </li>
-        </ul>
-      </section>
-      <section class="professional-skills">
-        <h2>Professional Skills</h2>
-        <ul>
-          <li>
-            Sublime proficiency in HTML, CSS/SCSS, JavaScript/Typescript, and
-            C/C#/C++.
-          </li>
-          <li>
-            Excellent understanding of NodeJS, Webpack, React, Electron, and
-            GraphQL.
-          </li>
-          <li>
-            Wonderful creation skills using different software such as Adobe
-            Photoshop, Adobe XD.
-          </li>
-          <li>Works wonderfully with Three.js, & Unity.</li>
-          <li>
-            Excellent documentation skills using Microsoft Office, and Microsoft
-            PowerPoint.
-          </li>
-        </ul>
-      </section>
-      <section class="experience">
-        <h2>Experience</h2>
-        <ul>
-          <li>
-            <h3>Freelance</h3>
-            <p>Mali & Family - Product Catalog</p>
-            <p class="date-range">2020</p>
-            <ul>
-              <li>Created a fully custom product catalog using react.</li>
-              <li>Fully custom responsive layout, for all devices.</li>
-              <li>Created a JSON CMS tool using both react and electron.</li>
-              <li>
-                Deployed website using AWS Amplify & S3 bucket for images.
-              </li>
-              <li>Loaded content asynchronously to reduce network latency.</li>
-              <li>Localized for spanish and english.</li>
-            </ul>
-          </li>
-          <li>
-            <h3>Freelance Developer</h3>
-            <p>Willow Games, Project Scavenger</p>
-            <p class="date-range">2016 - 20XX</p>
-            <ul>
-              <li>Worked with lead developer on custom tooling for artists.</li>
-              <li>Wrote optimized noise volumetric shaders.</li>
-              <li>
-                Optimized overall performance in certain areas and improved
-                Abstraction.
-              </li>
-            </ul>
-          </li>
-          <li>
-            <h3>Freelance</h3>
-            <p>Free Code Camp</p>
-            <p class="date-range">2016 - 20XX</p>
-            <ul>
-              <li>
-                Helped fellow students in coding issues. Engaged in the coding
-                community and helping newcomers, with coding questions.
-              </li>
-              <li>
-                Completed a certification course on Responsive Web Design,
-                JavaScript Algorithms & Data Structures, & Front-End Libraries
-                on Free Code Camp
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-      <section class="education">
-        <h2>Education</h2>
-        <ul>
-          <li>
-            <h3>Humber College, Toronto</h3>
-            <p class="date-range">2017 – 20XX</p>
-            <p>Game Programming - Advanced Diploma</p>
-          </li>
-          <li>
-            <h3>Brebeuf College, Toronto</h3>
-            <p class="date-range">2012 – 2016</p>
-            <p>Ontario Secondary School - Diploma Granted</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-  </body>
+      </ul>
+    </section>
+  </main>
+  <div class="decal">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</body>
 </html>
