--- a/index.html
+++ b/index.html
@@ -1,109 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juriel Garcia</title>
-    <link rel="stylesheet" href="main.css" />
-  </head>
 
-  <body>
-    <header>
-      <div>
-        <h1>Juriel Garcia S</h1>
-        <p>He/Him</p>
-      </div>
-      <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
-      <a href="tel:+6479696331">(647) 969-6331</a>
-      <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
-    </header>
-    <main>
-      <section class="profile">
-        <h2>Profile</h2>
-        <p>
-          Obsessed with design, code, and music, and learning. Whether recent techniques or something entirely new. Exploratory, solving problems one at a time, with attention to details, to ultimately create something to inspire, and provoke enjoyment.
-        </p>
-      </section>
-      <section class="personal-skills">
-        <h2>Personal Skills</h2>
-        <ul>
-          <li>Friendly and approachable.</li>
-          <li>Creative/Innovative.</li>
-          <li>Attentive Listener.</li>
-          <li>Constant yearning to learn.</li>
-          <li>Communication, Interpersonal, and Organizational Skills.</li>
-        </ul>
-      </section>
-      <section class="professional-skills">
-        <h2>Professional Skills</h2>
-        <ul>
-          <li>
-            Sublime proficiency in C/C#/C++, HTML/SCSS/JavaScript, Java, Swift.
-          </li>
-          <li>
-            Excellent understanding of game engines, such as Unity & Unreal; additionally, personal proprietary engines.
-          </li>
-          <li>
-            Wonderful creation skills using different software such as Blender,
-            Adobe Photoshop & Adobe XD.
-          </li>
-          <li>
-            Created mobile games & experiences in Android Studio & Xcode.
-          </li>
-          <li>
-            Excellent documentation skills using Microsoft Office & Microsoft
-            PowerPoint.
-          </li>
-        </ul>
-      </section>
-      <section class="experience">
-        <h2>Experience</h2>
-        <ul>
-          <li>
-            <h3>Developer</h3>
-            <p>Willow Games, Project Scavenger</p>
-            <p class="date-range">2020</p>
-            <ul>
-              <li>
-                Collaborated with the lead developer on custom tooling for artists.
-              </li>
-              <li>Generated optimized noise volumetric shaders.</li>
-              <li>
-                Optimized overall performance in certain areas and improved
-                abstraction.
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </section>
-      <section class="education">
-        <h2>Education</h2>
-        <ul>
-          <li>
-            <h3>Humber College, Toronto</h3>
-            <p class="date-range">2017 – 20XX</p>
-            <p>Game Programming - Advanced Diploma</p>
-          </li>
-          <li>
-            <h3>Free Code Camp</h3>
-            <p class="date-range">2016 - 2019</p>
-            <p>
-              Completed certification course for Responsive Web Design,
-              JavaScript Algorithms & Data Structures, & Front-End Libraries.
-            </p>
-          </li>
-          <li>
-            <h3>Brebeuf College, Toronto</h3>
-            <p class="date-range">2012 – 2016</p>
-            <p>Ontario Secondary School - Diploma Granted</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <div class="decal">
-      <div></div>
-      <div></div>
-      <div></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Juriel Garcia</title>
+  <link rel="stylesheet" href="main.css" />
+</head>
+
+<body>
+  <header>
+    <div>
+      <h1>Juriel Garcia S</h1>
+      <p>He/Him</p>
     </div>
-  </body>
+    <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
+    <a href="tel:+6479696331">(647) 969-6331</a>
+    <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
+  </header>
+  <main>
+    <section class="profile">
+      <h2>Profile</h2>
+      <p>
+        Obsessed with design, code, and music, and learning. Whether recent techniques or something entirely new.
+        Exploratory, solving problems one at a time, with attention to details, to ultimately create something to
+        inspire, and provoke enjoyment.
+      </p>
+    </section>
+    <section class="personal-skills">
+      <h2>Personal Skills</h2>
+      <ul>
+        <li>Friendly and approachable.</li>
+        <li>Creative/Innovative.</li>
+        <li>Attentive Listener.</li>
+        <li>Constant yearning to learn.</li>
+        <li>Communication, Interpersonal, and Organizational Skills.</li>
+      </ul>
+    </section>
+    <section class="professional-skills">
+      <h2>Professional Skills</h2>
+      <ul>
+        <li>
+          Sublime proficiency in C/C#/C++, HTML/SCSS/JavaScript, Java, Swift.
+        </li>
+        <li>Creates powerful full-stack websites & progressive web-applications, using React and AWS (Amplify, S3,
+          Lambda, Express, DynamoDB.)</li>
+        <li>
+          Excellent understanding of game engines, such as Unity & Unreal; additionally, personal proprietary engines.
+        </li>
+        <li>
+          Wonderful creation skills using different software such as Blender,
+          Adobe Photoshop/GIMP & Adobe XD.
+        </li>
+        <li>
+          Created mobile games & experiences in Android Studio & Xcode.
+        </li>
+        <li>
+          Excellent documentation skills using the Microsoft Office Suite.
+        </li>
+      </ul>
+    </section>
+    <section class="experience">
+      <h2>Experience</h2>
+      <ul>
+        <li>
+          <h3>Partner - Developer</h3>
+          <p>Willow Games</p>
+          <p class="date-range">2020 - 20XX</p>
+          <ul>
+            <li>Currently Working on Project Scavenger.</li>
+            <li>Managed AWS services & created a mailing platform & newsletter service.</li>
+            <li>
+              Collaborated with the lead developer on custom tooling for artists. As well as data validators.
+            </li>
+            <li>Generated optimized noise volumetric shaders.</li>
+            <li>
+              Optimized overall performance in certain areas and improved
+              abstraction.
+            </li>
+            <li>Participated in daily Stand Ups, discussing next steps & issues encountered.</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class="education">
+      <h2>Education</h2>
+      <ul>
+        <li>
+          <h3>Humber College, Toronto</h3>
+          <p class="date-range">2017 – 2021</p>
+          <p>Game Programming - Advanced Diploma</p>
+        </li>
+        <li>
+          <h3>Free Code Camp</h3>
+          <p class="date-range">2016 - 20XX</p>
+          <p>
+            Completed certification course for Responsive Web Design,
+            JavaScript Algorithms & Data Structures, & Front-End Libraries.
+            Currently finishing APIs and MicroServices certification.
+          </p>
+        </li>
+        <li>
+          <h3>Brebeuf College, Toronto</h3>
+          <p class="date-range">2012 – 2016</p>
+          <p>Ontario Secondary School - Diploma Granted</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <div class="decal">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+</body>
+
 </html>
