--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <section class="personal-skills">
       <h2>Personal Skills</h2>
       <ul>
-        <li>Friendly and approachable.</li>
         <li>Creative/Innovative.</li>
         <li>Attentive Listener.</li>
         <li>Constant yearning to learn.</li>
@@ -43,8 +42,8 @@
         <li>
           Sublime proficiency in C/C#/C++, HTML/SCSS/JavaScript, Java, Swift.
         </li>
-        <li>Creates powerful full-stack websites & progressive web-applications, using React and AWS (Amplify, S3,
-          Lambda, Express, DynamoDB.)</li>
+        <li>Developed powerful full-stack websites & progressive web-applications, using React and AWS (Amplify, S3,
+          Lambda, Express, DynamoDB).</li>
         <li>
           Excellent understanding of game engines, such as Unity & Unreal; additionally, personal proprietary engines.
         </li>
@@ -53,7 +52,7 @@
           Adobe Photoshop/GIMP & Adobe XD.
         </li>
         <li>
-          Created mobile games & experiences in Android Studio & Xcode.
+          Creates mobile games & experiences in Android Studio & Xcode.
         </li>
         <li>
           Excellent documentation skills using the Microsoft Office Suite.
@@ -64,7 +63,7 @@
       <h2>Experience</h2>
       <ul>
         <li>
-          <h3>Partner - Developer</h3>
+          <h3>Partner & Developer</h3>
           <p>Willow Games</p>
           <p class="date-range">2020 - 20XX</p>
           <ul>
@@ -79,6 +78,7 @@
               abstraction.
             </li>
             <li>Participated in daily Stand Ups, discussing next steps & issues encountered.</li>
+            <li>Synthesized Music & Integrated FMOD for Music, SFX, & Dialog.</li>
           </ul>
         </li>
       </ul>
