--- a/index.html
+++ b/index.html
@@ -1,118 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Juriel Garcia</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Juriel Garcia</title>
-  <link rel="stylesheet" href="main.css" />
-</head>
-
-<body>
-  <header>
-    <div>
-      <h1>Juriel Garcia S</h1>
-      <p>He/Him</p>
-    </div>
-    <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
-    <a href="tel:+6479696331">(647) 969-6331</a>
-    <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
-  </header>
-  <main>
-    <section class="profile">
+  <body>
+    <header>
+      <div>
+        <h1>Juriel Garcia S</h1>
+        <p>He/Him</p>
+      </div>
+      <!-- <div class="contact"> -->
+      <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
+      <a href="tel:+6479696331">(647) 969-6331</a>
+      <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
+      <!-- </div> -->
+    </header>
+    <main>
+      <!-- <section class="profile">
       <h2>Profile</h2>
       <p>
-        Obsessed with design, code, and music, and learning. Whether recent techniques or something entirely new.
-        Exploratory, solving problems one at a time, with attention to details, to ultimately create something to
-        inspire, and provoke enjoyment.
+        Passionate about design, code, and music, I am driven by an insatiable curiosity for
+        learning—whether it's mastering the latest techniques or delving into entirely new realms. My approach is
+        exploratory, solving problems methodically with meticulous attention to detail. My ultimate goal is to create
+        inspiring and enjoyable experiences that provoke a sense of wonder and delight.
       </p>
     </section>
     <section class="personal-skills">
       <h2>Personal Skills</h2>
       <ul>
         <li>Creative/Innovative.</li>
-        <li>Attentive Listener.</li>
-        <li>Constant yearning to learn.</li>
-        <li>Communication, Interpersonal, and Organizational Skills.</li>
+        <li>Attentive listener.</li>
+        <li>Enjoys learning about new tools & technology.</li>
+        <li>Communication, interpersonal, and organizational skills.</li>
       </ul>
-    </section>
-    <section class="professional-skills">
-      <h2>Professional Skills</h2>
-      <ul>
-        <li>
-          Sublime proficiency in C/C#/C++, HTML/SCSS/JavaScript, Java, Swift.
-        </li>
-        <li>Developed powerful full-stack websites & progressive web-applications, using React and AWS (Amplify, S3,
-          Lambda, Express, DynamoDB).</li>
-        <li>
-          Excellent understanding of game engines, such as Unity & Unreal; additionally, personal proprietary engines.
-        </li>
-        <li>
-          Wonderful creation skills using different software such as Blender,
-          Adobe Photoshop/GIMP & Adobe XD.
-        </li>
-        <li>
-          Creates mobile games & experiences in Android Studio & Xcode.
-        </li>
-        <li>
-          Excellent documentation skills using the Microsoft Office Suite.
-        </li>
-      </ul>
-    </section>
-    <section class="experience">
-      <h2>Experience</h2>
-      <ul>
-        <li>
-          <h3>Partner & Developer</h3>
-          <p>Willow Games</p>
-          <p class="date-range">2020 - 20XX</p>
-          <ul>
-            <li>Currently Working on Project Scavenger.</li>
-            <li>Managed AWS services & created a mailing platform & newsletter service.</li>
-            <li>
-              Collaborated with the lead developer on custom tooling for artists. As well as data validators.
-            </li>
-            <li>Generated optimized noise volumetric shaders.</li>
-            <li>
-              Optimized overall performance in certain areas and improved
-              abstraction.
-            </li>
-            <li>Participated in daily Stand Ups, discussing next steps & issues encountered.</li>
-            <li>Synthesized Music & Integrated FMOD for Music, SFX, & Dialog.</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <section class="education">
-      <h2>Education</h2>
-      <ul>
-        <li>
-          <h3>Humber College, Toronto</h3>
-          <p class="date-range">2017 – 2021</p>
-          <p>Game Programming - Advanced Diploma</p>
-        </li>
-        <li>
-          <h3>Free Code Camp</h3>
-          <p class="date-range">2016 - 20XX</p>
-          <p>
-            Completed certification course for Responsive Web Design,
-            JavaScript Algorithms & Data Structures, & Front-End Libraries.
-            Currently finishing APIs and MicroServices certification.
-          </p>
-        </li>
-        <li>
-          <h3>Brebeuf College, Toronto</h3>
-          <p class="date-range">2012 – 2016</p>
-          <p>Ontario Secondary School - Diploma Granted</p>
-        </li>
-      </ul>
-    </section>
-  </main>
-  <div class="decal">
-    <div></div>
-    <div></div>
-    <div></div>
-  </div>
-</body>
-
+    </section> 
+    -->
+      <section class="experience">
+        <h2>Experience</h2>
+        <ul>
+          <li>
+            <h3>Professor</h3>
+            <p>Humber College</p>
+            <p class="date-range">
+              2022 – <span class="present">Present</span>
+            </p>
+            <ul>
+              <li>Managed 30-50 students.</li>
+              <li>
+                Instructed courses on
+                <i>&quot;Object-Oriented Analysis & Design&quot;</i> and
+                <i>&quot;Game Design&quot;</i>, fostering <br />
+                exploration and creativity.
+              </li>
+              <li>
+                Developed comprehensive lesson plans translating game design
+                requirements into code.
+              </li>
+              <li>
+                Guided students in incorporating design patterns and data
+                structures into their projects, promoting effective analysis and
+                architecting.
+              </li>
+              <li>
+                Trained students to design games with a focus on mechanics,
+                dynamics, aesthetics, and narrative.
+              </li>
+            </ul>
+          </li>
+          <li>
+            <h3>Partner & Developer</h3>
+            <p>Willow Games</p>
+            <p class="date-range">
+              2020 – <span class="present">Present</span>
+            </p>
+            <ul>
+              <li>
+                Managed AWS services & spearheaded the creation of a robust
+                mailing platform & newsletter service.
+              </li>
+              <li>
+                Collaborated closely with the lead developer on crafting custom
+                tools for artists and data validators.
+              </li>
+              <li>Created website using React, AWS Amplify, and AWS Lambda.</li>
+              <li>
+                Actively participated in daily Stand Ups, fostering open
+                communication regarding project progression and addressing
+                encountered issues.
+              </li>
+              <li>
+                Synthesized music and seamlessly integrated FMOD for
+                comprehensive audio experiences, covering music, sound effects,
+                and dialog.
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="education">
+        <h2>Education</h2>
+        <ul>
+          <li>
+            <h3>Humber College, Toronto</h3>
+            <p class="date-range">2017 – 2021</p>
+            <p>Game Programming - Advanced Diploma</p>
+          </li>
+          <li>
+            <h3>Free Code Camp</h3>
+            <p class="date-range">
+              2016 – <span class="present">Present</span>
+            </p>
+            <p>
+              Certification courses - <i>&quot;Responsive Web Design&quot;</i>,
+              <i>&quot;Algorithms & Data Structures&quot;</i>, &
+              <i>&quot;Front-End Libraries&quot;</i>.
+            </p>
+          </li>
+          <li>
+            <h3>Brebeuf College, Toronto</h3>
+            <p class="date-range">2012 – 2016</p>
+            <p>Ontario Secondary School - Diploma</p>
+          </li>
+        </ul>
+      </section>
+      <section class="professional-skills">
+        <h2>Professional Skills</h2>
+        <ul>
+          <li>
+            Advanced proficiency in C/C#/C++, HTML/CSS/JavaScript/Typescript,
+            Intermediate proficiency in Python, Java, Swift. Working knowledge
+            of Rust, Clojure, & Ruby.
+          </li>
+          <li>
+            Developed powerful full-stack websites and progressive web
+            applications using React and AWS technologies (Amplify, S3, Lambda,
+            Express, DynamoDB), modernized with NEXT.js.
+          </li>
+          <li>
+            In-depth understanding of game engines and 3D frameworks, advanced
+            competence in Unity and Three.js, intermediate competence in Unreal.
+            Additionally, developed personal proprietary engines.
+          </li>
+          <li>
+            Experience with version control systems (Git) and project management
+            tools (Jira, Trello).
+          </li>
+          <li>
+            Worked with third-party APIs, scripting tools, and plugins (FMOD,
+            VCV Rack, Obsidian Plugins, OBS Studio)
+          </li>
+          <li>
+            Excellent documentation skills utilizing Microsoft and Google Office
+            Suite.
+          </li>
+          <li>
+            Created visually stunning assets using Blender, Adobe
+            Photoshop/GIMP, Inkscape, Adobe XD/Miro.
+          </li>
+        </ul>
+      </section>
+    </main>
+    <div class="decal">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </body>
 </html>
