Removing Decals from Resume

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <!-- <div class="contact"> -->
       <p>1017 - 2040 Don Mills Rd. North York, ON. M3A 3R7</p>
-      <a href="tel:+6479696331">(647) 969-6331</a>
+      <a href="tel:+16479696331">+1(647)969-6331</a>
       <a href="mailto:jurielgarcia.pro@gmail.com">jurielgarcia.pro@gmail.com</a>
       <!-- </div> -->
     </header>
@@ -43,7 +43,7 @@
         <h2>Experience</h2>
         <ul>
           <li>
-            <h3>Professor</h3>
+            <h3>Partial Load Professor</h3>
             <p>Humber College</p>
             <p class="date-range">
               2022 – <span class="present">Present</span>
@@ -164,10 +164,5 @@
         </ul>
       </section>
     </main>
-    <div class="decal">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
   </body>
 </html>
