Added Back Profile

--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
       <!-- </div> -->
     </header>
     <main>
-      <!-- <section class="profile">
-      <h2>Profile</h2>
-      <p>
-        Passionate about design, code, and music, I am driven by an insatiable curiosity for
-        learning—whether it's mastering the latest techniques or delving into entirely new realms. My approach is
-        exploratory, solving problems methodically with meticulous attention to detail. My ultimate goal is to create
-        inspiring and enjoyable experiences that provoke a sense of wonder and delight.
-      </p>
-    </section>
-    <section class="personal-skills">
+      <section class="profile">
+        <!-- <h2>Profile</h2> -->
+        <p>
+          Passionate about design, code, and music, I am driven by an insatiable
+          curiosity for learning—whether it's mastering the latest techniques or
+          delving into entirely new realms. My approach is exploratory, solving
+          problems methodically with meticulous attention to detail. Ultimately,
+          my goal is to create inspiring and enjoyable experiences that provoke
+          a sense of wonder and delight.
+        </p>
+      </section>
+      <!--x
+      <section class="personal-skills">
       <h2>Personal Skills</h2>
       <ul>
         <li>Creative/Innovative.</li>
@@ -49,12 +52,11 @@
               2022 – <span class="present">Present</span>
             </p>
             <ul>
-              <li>Managed 30-50 students.</li>
               <li>
-                Instructed courses on
+                Managed 30-50 students, fostering exploration and creativity in
+                course on
                 <i>&quot;Object-Oriented Analysis & Design&quot;</i> and
-                <i>&quot;Game Design&quot;</i>, fostering <br />
-                exploration and creativity.
+                <i>&quot;Game Design&quot;</i>
               </li>
               <li>
                 Developed comprehensive lesson plans translating game design
@@ -64,10 +66,6 @@
                 Guided students in incorporating design patterns and data
                 structures into their projects, promoting effective analysis and
                 architecting.
-              </li>
-              <li>
-                Trained students to design games with a focus on mechanics,
-                dynamics, aesthetics, and narrative.
               </li>
             </ul>
           </li>
@@ -83,19 +81,17 @@
                 mailing platform & newsletter service.
               </li>
               <li>
-                Collaborated closely with the lead developer on crafting custom
-                tools for artists and data validators.
+                Collaborated on crafting custom tools for artists and data
+                validators.
               </li>
               <li>Created website using React, AWS Amplify, and AWS Lambda.</li>
               <li>
-                Actively participated in daily Stand Ups, fostering open
-                communication regarding project progression and addressing
-                encountered issues.
+                Actively participated in daily Stand Ups, addressing project
+                progression and issues.
               </li>
               <li>
-                Synthesized music and seamlessly integrated FMOD for
-                comprehensive audio experiences, covering music, sound effects,
-                and dialog.
+                Synthesized music and integrated FMOD for comprehensive audio
+                experiences.
               </li>
             </ul>
           </li>
@@ -115,7 +111,7 @@
               2016 – <span class="present">Present</span>
             </p>
             <p>
-              Certification courses - <i>&quot;Responsive Web Design&quot;</i>,
+              Certifications in: <i>&quot;Responsive Web Design&quot;</i>,
               <i>&quot;Algorithms & Data Structures&quot;</i>, &
               <i>&quot;Front-End Libraries&quot;</i>.
             </p>
@@ -131,9 +127,9 @@
         <h2>Professional Skills</h2>
         <ul>
           <li>
-            Advanced proficiency in C/C#/C++, HTML/CSS/JavaScript/Typescript,
-            Intermediate proficiency in Python, Java, Swift. Working knowledge
-            of Rust, Clojure, & Ruby.
+            Advanced proficiency: C/C#/C++, HTML, Sass/SCSS,
+            JavaScript/Typescript, Intermediate proficiency in Python, Java,
+            Swift. Working knowledge of Rust, Clojure, & Ruby.
           </li>
           <li>
             Developed powerful full-stack websites and progressive web
